добавлениы LINQ запросы, неполное редактирование
