# Models/ElectricalPowerStation.cs
@@ -1,4 +1,6 @@
-﻿namespace GasForecast.Models
+﻿using System.ComponentModel.DataAnnotations;
+
+namespace GasForecast.Models
 {
     public class ElectricalPowerStation
     {
@@ -9,6 +11,21 @@
         public DateTime LaunchDate { get; set; } // дата запуска
 
         // Целевая переменная  
-        public double GasConsumption { get; set; } // Расход газа на электроэнергию, м³
+        //public double GasConsumption { get; set; } // Расход газа на электроэнергию, м³
+    }
+
+    public class LaunchDateNotFutureAttribute : ValidationAttribute
+    {
+        protected override ValidationResult IsValid(object value, ValidationContext validationContext)
+        {
+            if (value is DateTime date)
+            {
+                if (date > DateTime.Now)
+                {
+                    return new ValidationResult(ErrorMessage ?? "Дата запуска не может быть позже текущей даты");
+                }
+            }
+            return ValidationResult.Success;
+        }
     }
 }
