# Models/UnitPassportResponseDTO.cs
@@ -1,9 +1,0 @@
-﻿public class UnitPassportResponseDto
-{
-    public int Id { get; set; }
-    public string UnitType { get; set; }
-    public string EngineType { get; set; }
-    public int RatedPower { get; set; }
-    public int StandartPower { get; set; }
-    public double ConsumptionNorm { get; set; }
-}
